2003-09-11  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/merge2.s: New.
	* ld-elf/merge2.d: New.

2003-08-16  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/bpo-9.d, ld-mmix/bpo-10.d, ld-mmix/bpo-11.d: Adjust for
	recent objdump "Contents of ..." change.

2003-08-02  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/shared-2.d, ld-sh/textrel1.s, ld-sh/textrel2.s: New test.

2003-08-02  Alan Modra  <amodra@bigpond.net.au>

	* ld-d10v/reloc-001.d: Adjust for objdump -d change.
	* ld-d10v/reloc-002.d: Likewise.
	* ld-d10v/reloc-005.d: Likewise.
	* ld-d10v/reloc-006.d: Likewise.
	* ld-d10v/reloc-009.d: Likewise.
	* ld-d10v/reloc-010.d: Likewise.
	* ld-d10v/reloc-013.d: Likewise.
	* ld-d10v/reloc-014.d: Likewise.
	* ld-xstormy16/pcrel.d: Likewise.

2003-07-29  Jakub Jelinek  <jakub@redhat.com>

	* ld-elfvsb/elf-offset.ld: Add .rel.toc, .rela.toc and .toc
	sections.

2003-07-29  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsso.r: Update.
	* ld-powerpc/tlstocso.r: Update.

2003-07-29  Nick Clifton  <nickc@redhat.com>

	* ld-alpha/tlsbin.dd: Update to account for .eh_frame section.
	* ld-alpha/tlsbin.rd: Likewise.
	* ld-alpha/tlsbin.sd: Likewise.
	* ld-alpha/tlsbinr.dd: Likewise.
	* ld-alpha/tlsbinr.rd: Likewise.
	* ld-alpha/tlsbinr.sd: Likewise.
	* ld-alpha/tlspic.dd: Likewise.
	* ld-alpha/tlspic.rd: Likewise.
	* ld-alpha/tlspic.sd: Likewise.	

2003-07-26  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsexe32.d: Update.
	* ld-powerpc/tlsso32.d: Update.

2003-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-powerpc/tlsexe.r: .sbss is NOBITS, not PROGBITS.
	* ld-powerpc/tlsexetoc.r: Likewise.
	* ld-powerpc/tlsso.r: Likewise.
	* ld-powerpc/tlstocso.r: Likewise.

2003-07-23  Stephane Carrez  <stcarrez@nerim.fr>

	* ld-srec/srec.exp: For m6811/m6812 use --defsym to define _.z soft
	register.

2003-07-22  H.J. Lu <hongjiu.lu@intel.com>

	* ld-selective/selective.exp: Skip "ia64-*-*".

	* ld-srec/srec.exp: Make xfail on "ia64-*-*".
