@@ -25,7 +25,5 @@ SYMBOL TABLE:
 Contents of section \.text:
  0000 e3fd0001 2336fe00 00000000 0000000c  .*
  0010 fd040810                             .*
-Contents of section \.data:
-Contents of section \.sbss:
 Contents of section \.MMIX\.reg_contents:
  07f0 00000000 00000008                    .*
