@@ -25,7 +25,5 @@ SYMBOL TABLE:
 
 Contents of section \.text:
  0000 e3fd0001 232afd00                    .*
-Contents of section \.data:
-Contents of section \.sbss:
 Contents of section \.MMIX\.reg_contents:
  07e8 00000000 0000002e 00007048 860f3a38  .*
