@@ -26,7 +26,5 @@ SYMBOL TABLE:
 
 Contents of section \.text:
  0000 e3fd0001 232afe1e 2321fe00           .*
-Contents of section \.data:
-Contents of section \.sbss:
 Contents of section \.MMIX\.reg_contents:
  07f0 00000000 00000010                    .*
