@@ -26,8 +26,6 @@ SYMBOL TABLE:
 
 Contents of section \.text:
  0000 e3fd0001 8f79fd00 232afc00           .*
-Contents of section \.data:
-Contents of section \.sbss:
 Contents of section \.MMIX\.reg_contents:
  07e0 00000000 00000032 00000000 00000133  .*
  07f0 00007048 860f3a38                    .*
