@@ -27,7 +27,5 @@ SYMBOL TABLE:
 
 Contents of section \.text:
  0000 e3fd0001 232afd1a 8f79fe00 2321fd00  .*
-Contents of section \.data:
-Contents of section \.sbss:
 Contents of section \.MMIX\.reg_contents:
  07e8 00000000 00000014 00000000 00000133  .*
