@@ -23,5 +23,3 @@ SYMBOL TABLE:
 
 Contents of section \.text:
  1000 fd030303                             .*
-Contents of section \.data:
-Contents of section \.sbss:
