@@ -25,5 +25,3 @@ SYMBOL TABLE:
 
 Contents of section \.text:
  1000 fd030303 e3fd0001                    .*
-Contents of section \.data:
-Contents of section .sbss:
