@@ -25,5 +25,3 @@ SYMBOL TABLE:
 
 Contents of section \.text:
  1000 e3fd0001 fd030303                    .*
-Contents of section \.data:
-Contents of section \.sbss:
