@@ -27,4 +27,3 @@ Contents of section \.text:
  0000 e3fd0001                             .*
 Contents of section \.data:
  2000000000000200 00000004 00000005 00000006           .*
-Contents of section \.sbss:
