@@ -23,5 +23,3 @@ SYMBOL TABLE:
 
 Contents of section \.text:
  1004 fd000000 00001004 e3fd0001           .*
-Contents of section \.data:
-Contents of section \.sbss:
